Adjusts for mobile resolutions

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">
-      <img src="/assets/gpia-logo-notext.png" alt="GP-IA Inteligência Artificial" class="logo"><span class=logo>GP-IA</span> Inteligência Artificial</a><nav class="site-nav">
+      <img src="/assets/gpia-logo-notext.png" alt="GP-IA Inteligência Artificial" class="logo"><span class=logo>GP-IA</span> <span class=logo_subtitle>Inteligência Artificial</span></a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -77,7 +77,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading"><img src="/assets/gpia-logo-notext.png" alt="GP-IA" class="logo"> GP-IA Inteligência Artificial</h2>
+    <h2 class="footer-heading"><a class="page-link" href="/about/"><img src="/assets/gpia-logo-notext.png" alt="GP-IA" class="logo"> <span class=logo>GP-IA</span> Inteligência Artificial</a></h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-4">
@@ -87,13 +87,6 @@
         </ul>
         <p class="description">Soluções completas de IA e Machine Learning, incluindo visão computacional, NLP, engenharia de dados, consultoria estratégica e IA generativa, para transformar e escalar seu negócio.</p>
       </div>
-      
-      <!--div class="footer-col footer-col-2"><ul class="social-media-list"></ul>
-</div>
-
-      <div class="footer-col footer-col-3">
-        <p>Soluções completas de IA e Machine Learning, incluindo visão computacional, NLP, engenharia de dados, consultoria estratégica e IA generativa, para transformar e escalar seu negócio.</p>
-      </div-->
     </div>
 
     <div class="footer-col-wrapper">
