--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">
-      <img src="/assets/gpia-logo-notext.png" alt="GP-IA Inteligência Artificial" class="logo"><span class=logo>GP-IA</span> Inteligência Artificial</a><nav class="site-nav">
+      <img src="/assets/gpia-logo-notext.png" alt="GP-IA Inteligência Artificial" class="logo"><span class=logo>GP-IA</span> <span class=logo_subtitle>Inteligência Artificial</span></a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -53,13 +53,17 @@
 <p>Com uma habilidade quase humana da IA Generativa de conversar, considerar e criar, capturou a imaginação para a criação de aplicativos que mudam a maneira como trabalhamos.
 Os casos de uso da IA Generativa são tão vastos e variados que vão muito além das interfaces de chat.</p>
 
-<p>Oferecemos soluções personalizadas que integram a IA como parte central das operações da sua empresa. Desde automação inteligente até análise preditiva e personalização em larga escala, ajudamos você a incorporar IA de maneira eficiente e estratégica, garantindo que ela atue como catalisadora de valor em todas as áreas de atuação.</p>
+<p><a href="/services" class="button-4">Confira nossos Serviços</a></p>
+
+<p>Oferecemos <a href="/services">soluções personalizadas</a> que integram a IA como parte central das operações da sua empresa. Desde automação inteligente até análise preditiva e personalização em larga escala, ajudamos você a incorporar IA de maneira eficiente e estratégica, garantindo que ela atue como catalisadora de valor em todas as áreas de atuação.</p>
 
 <h2 class="service_name logo-color-4" id="nós-fazemos-a-ia-trabalhar-para-você">Nós fazemos a IA trabalhar para você</h2>
 
 <p>Com os avanços da Inteligência Artificial, as empresas podem alcançar processos significativamente mais autônomos. Agentes autônomos — ou como gostamos de chamar, colegas de trabalho de IA — representam o próximo salto na tecnologia de IA. Esses sistemas avançados não são apenas ferramentas, mas verdadeiros colaboradores, capazes de perceber o ambiente, tomar decisões e executar tarefas com mínima intervenção humana, ampliando e complementando as capacidades dos trabalhadores do conhecimento.</p>
 
-<p>Na GP-IA, nossa missão é integrar esses colegas de trabalho de IA nas operações do seu negócio, ajudando sua empresa a ganhar eficiência, produtividade e inovação contínua. Seja no suporte a decisões, na automação de tarefas complexas ou na criação de novas soluções, fazemos a IA trabalhar para você, garantindo que suas operações sejam mais inteligentes, ágeis e preparadas para o futuro.</p>
+<p>Na GP-IA, nossa missão é integrar esses colegas de trabalho de IA nas operações do seu negócio, ajudando sua empresa a ganhar eficiência, produtividade e inovação contínua. Seja no <a href="/services">suporte a decisões</a>, na automação de tarefas complexas ou na criação de novas soluções, fazemos a IA trabalhar para você, garantindo que suas operações sejam mais inteligentes, ágeis e preparadas para o futuro.</p>
+
+<p><a href="/services" class="button-5">Confira nossos Serviços</a></p>
 
 <hr />
 
@@ -129,7 +133,7 @@ Os casos de uso da IA Generativa são tão vastos e variados que vão muito alé
 
   <div class="wrapper">
 
-    <h2 class="footer-heading"><img src="/assets/gpia-logo-notext.png" alt="GP-IA" class="logo"> GP-IA Inteligência Artificial</h2>
+    <h2 class="footer-heading"><a class="page-link" href="/about/"><img src="/assets/gpia-logo-notext.png" alt="GP-IA" class="logo"> <span class=logo>GP-IA</span> Inteligência Artificial</a></h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-4">
@@ -139,13 +143,6 @@ Os casos de uso da IA Generativa são tão vastos e variados que vão muito alé
         </ul>
         <p class="description">Soluções completas de IA e Machine Learning, incluindo visão computacional, NLP, engenharia de dados, consultoria estratégica e IA generativa, para transformar e escalar seu negócio.</p>
       </div>
-      
-      <!--div class="footer-col footer-col-2"><ul class="social-media-list"></ul>
-</div>
-
-      <div class="footer-col footer-col-3">
-        <p>Soluções completas de IA e Machine Learning, incluindo visão computacional, NLP, engenharia de dados, consultoria estratégica e IA generativa, para transformar e escalar seu negócio.</p>
-      </div-->
     </div>
 
     <div class="footer-col-wrapper">
