add cognitive-arch schema

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Os casos de uso da IA Generativa são tão vastos e variados que vão muito alé
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-4">
-          <span>Copyright 2024</span>
+          <span class="copyright">Copyright 2024</span>
       </div>
     </div>
 
