--- a/services/index.html
+++ b/services/index.html
@@ -81,8 +81,8 @@
 
 <hr />
 
-<p><img src="/assets/services/DataEngineering-GPIA-Fuzz.png" alt="Data Engineering" class="service_image logo-color-border-6" /></p>
-<h2 class="service_name logo-color-6" id="data-engineering-services-para-projetos-de-ia">Data Engineering Services para projetos de IA</h2>
+<p><img src="/assets/services/DataEngineering-GPIA-Fuzz.png" alt="Data Engineering" class="service_image logo-color-border-2" /></p>
+<h2 class="service_name logo-color-2" id="data-engineering-services-para-projetos-de-ia">Data Engineering Services para projetos de IA</h2>
 
 <p>A engenharia de dados é a base de qualquer projeto de Inteligência Artificial de sucesso. Para que modelos de IA funcionem de forma eficiente, é essencial ter uma infraestrutura de dados robusta e escalável que garanta a qualidade, integridade e acessibilidade dos dados. No entanto, construir e manter essa infraestrutura internamente pode ser caro e demorado.</p>
 
@@ -138,7 +138,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-4">
-          <span>Copyright 2024</span>
+          <span class="copyright">Copyright 2024</span>
       </div>
     </div>
 
